// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Activity: User activity records.
User: User information and authentication details.
Comment: Comments made by users on posts.
Post: Details about user posts made on the platform.
Follow: Defines the follow relationship between users.
Like: Likes made by users on posts.
Log: Log of system activities.
Message: Messages exchanged between users.
Notification: Notifications sent to users.
PostTag: Associative entity for the post-to-tag relationship.
Tag: Tags associated with posts.
Profile: Profile details of the user including their biography.
'''
}

Table Activity {
    id INTEGER [primary key]
    description TEXT 
    user_id INTEGER 
    }

Table User {
    id INTEGER [primary key]
    username VARCHAR 
    email VARCHAR 
    password VARCHAR 
    profile_id INTEGER 
    }

Table Comment {
    id INTEGER [primary key]
    content TEXT 
    post_id INTEGER 
    user_id INTEGER 
    }

Table Post {
    id INTEGER [primary key]
    title VARCHAR 
    content TEXT 
    user_id INTEGER 
    }

Table Follow {
    id INTEGER [primary key]
    follower_id INTEGER 
    followee_id INTEGER 
    }

Table Like {
    id INTEGER [primary key]
    post_id INTEGER 
    user_id INTEGER 
    }

Table Log {
    id INTEGER [primary key]
    entry TEXT 
    created_at DATETIME 
    }

Table Message {
    id INTEGER [primary key]
    content TEXT 
    sender_id INTEGER 
    receiver_id INTEGER 
    }

Table Notification {
    id INTEGER [primary key]
    content TEXT 
    user_id INTEGER 
    }

Table PostTag {
    id INTEGER [primary key]
    post_id INTEGER 
    tag_id INTEGER 
    }

Table Tag {
    id INTEGER [primary key]
    name VARCHAR 
    }

Table Profile {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    bio TEXT 
    user_id INTEGER 
    }



// Relationships
    Ref: Activity.(user_id) < User.(id)
    Ref: User.(profile_id) < Profile.(id)
    Ref: Comment.(post_id) < Post.(id)
    Ref: Comment.(user_id) < User.(id)
    Ref: Post.(user_id) < User.(id)
    Ref: Follow.(followee_id) < User.(id)
    Ref: Follow.(follower_id) < User.(id)
    Ref: Like.(post_id) < Post.(id)
    Ref: Like.(user_id) < User.(id)
    Ref: Message.(receiver_id) < User.(id)
    Ref: Message.(sender_id) < User.(id)
    Ref: Notification.(user_id) < User.(id)
    Ref: PostTag.(post_id) < Post.(id)
    Ref: PostTag.(tag_id) < Tag.(id)
    Ref: Profile.(user_id) < User.(id)
